--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      
      <div class="linkuri2">  
 
-      <a href="diverse/ccm_2022.html"><h3>CCM</h3></a>
+      <a href="diverse/ccm2022anexe.html"><h3>CCM</h3></a>
     
       <a href="https://portal.srr.ro/portal/"><h3>Portal SRR</h3></a>
 
