--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="https://ordine-productie.netlify.app/"><h3>Ordine Productie</h3></a>
 
       <a href="diverse/zile-Iulie-2022.webp"><h3>Zile Iulie</h3></a>
+      <a href="diverse/zile-August-2022.jpg"><h3>Zile August</h3></a>
      </div>
      
      <div class="linkuri2">  
