--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
     <h1 style="text-align: center; color: rgb(250, 0, 12); text-shadow: 3px 3px 3px rgb(22, 18, 18);">Linkurile mele</h1>
     <div class="linkuri1">
+      <a href="https://calcul-salariu.netlify.app/"><h3>Calcul salariu</h3></a>
       <a href="https://ordine-emisie.netlify.app"><h3>Ordine Emisie</h3></a>
-
       <a href="https://ordine-productie.netlify.app/"><h3>Ordine Productie</h3></a>
-
       <a href="diverse/zile-Iulie-2022.webp"><h3>Zile Iulie</h3></a>
       <a href="diverse/zile-August-2022.jpg"><h3>Zile August</h3></a>
      </div>
