zile sept si oct

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a href="https://calcul-salariu.netlify.app/"><h3>Calcul salariu</h3></a>
       <a href="https://ordine-emisie.netlify.app"><h3>Ordine Emisie</h3></a>
       <a href="https://ordine-productie.netlify.app/"><h3>Ordine Productie</h3></a>
-      <a href="diverse/zile-Iulie-2022.webp"><h3>Zile Iulie</h3></a>
-      <a href="diverse/zile-August-2022.jpg"><h3>Zile August</h3></a>
+      <a href="diverse/zile-Septembrie-2022.html"><h3>Zile Septembrie</h3></a>
+      <a href="diverse/zile-Octombrie-2022.html"><h3>Zile Octombrie</h3></a>
      </div>
      
      <div class="linkuri2">  
