--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         
       <!-- <a href="https://legestart.ro/mutarea-de-catre-angajator-salariatului-de-la-un-birou-la-altul-reprezinta-o-modificare-nelegala-cim/"><h3>Mutarea angajatului in alta sectie</h3></a>
         
-      <a href="http://pro-legal.ro/schimbarea-sectiei-de-munca-a-salariatului-reprezinta-atributul-exclusiv-al-angajatorului-de-a-si-distribui-forta-de-munca-si-nu-o-modificare-a-locului-muncii/"><h3>Mutarea in alta sectie hotarare judecatoreasca</h3></a>
-    </div> -->
+      <a href="http://pro-legal.ro/schimbarea-sectiei-de-munca-a-salariatului-reprezinta-atributul-exclusiv-al-angajatorului-de-a-si-distribui-forta-de-munca-si-nu-o-modificare-a-locului-muncii/"><h3>Mutarea in alta sectie hotarare judecatoreasca</h3></a> -->
+    </div>
   </body>
 </html>
 
