--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <h1 style="text-align: center; color: rgb(250, 0, 12); text-shadow: 3px 3px 3px rgb(22, 18, 18);">Linkurile mele</h1>
     <div class="linkuri1">
       <a href="https://calcul-salariu.netlify.app/"><h3>Calcul salariu</h3></a>
-      <a href="https://ordine-emisie.netlify.app"><h3>Ordine Emisie</h3></a>
-      <a href="https://ordine-productie.netlify.app/"><h3>Ordine Productie</h3></a>
-      <a href="diverse/zile-Septembrie-2022.html"><h3>Zile Septembrie</h3></a>
-      <a href="diverse/zile-Octombrie-2022.html"><h3>Zile Octombrie</h3></a>
+      <!-- <a href="https://ordine-emisie.netlify.app"><h3>Ordine Emisie</h3></a> -->
+      <a href="https://padlet.com/dorup2001_/ordine-emisie-94afafn19a8kktwz"><h3>Ordine Emisie</h3></a>
+
+      <a href="https://padlet.com/dorupopesscu/ordine-productie-lwwnx9tiqw027oq1"><h3>Ordine Productie</h3></a>
+      <!-- <a href="https://ordine-productie.netlify.app/"><h3>Ordine Productie</h3></a> -->
+      <!-- <a href="diverse/zile-Septembrie-2022.html"><h3>Zile Septembrie</h3></a>
+      <a href="diverse/zile-Octombrie-2022.html"><h3>Zile Octombrie</h3></a> -->
      </div>
      
      <div class="linkuri2">  
